Revert "add style to fix animation-based overflow problem" it didn't actually fix anything so i'm removing dead code
5d8b403264dbf0d0a6badb08fc1b4f12ecd2703f

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -10,19 +10,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .heading-font {
   letter-spacing: 0;
 }
 body {
-  overflow-x: hidden;
   font-family: 'Open Sans';
   color: var(--geodav-grey);
   font-size: 16px;
   font-weight: 400;
   line-height: 30px;
-}
-/*
-  prevent weird bug caused by animations on mobile
-  where the right side would be scrollable into blank space
-*/
-:root, body, section {
-  max-width: 100%;
 }
 .section-header-line {
   max-width: 100%;
